k8s/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: jerney-ns
  labels:
    app: jerney-frontend
  annotations:
    description: "Deployment for the Jerney frontend React/Vite application"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-pod
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: frontend-pod
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 101 # nginx user in alpine is 101
      containers:
        - name: frontend-container
          image: zohaibwarraich/jerney-frontend:v4-91cb9f3
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false # Nginx needs to write to /var/cache/nginx
            # runAsUser: 101 # nginx user in alpine is 101
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
          volumeMounts:
            - name: nginx-config-volume
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: nginx-config-volume
          configMap:
            name: frontend-config
