k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: jerney-ns
  labels:
    app: jerney-frontend
spec:
  type: NodePort
  selector:
    app: frontend-pod
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 30080
